spelling fixes and text updates

--- a/dokumentation/src/anhang.tex
+++ b/dokumentation/src/anhang.tex
@@ -2,6 +2,23 @@
 \subsection{Analysephase}
 \subsubsection{Vergleich: DLD Aufwand vs QGram Aufwand mit Fuzzy Join}
 \subsubsection{Vergleich: Theoretischer DLD vs QGram Zeitvergleich }
+\subsubsection{Projektkosten}
+\begin{table}[!htp]
+	\centering
+	\caption{Projektkosten}
+	\label{projektkosten}
+	\begin{tabular}{llllll}
+		\rowcolor[HTML]{9698ED}
+		{\color[HTML]{FFFFFF} \textbf{Vorgang}} & {\color[HTML]{FFFFFF} \textbf{Mitarbeiter}} & {\color[HTML]{FFFFFF} \textbf{Stunden}} & {\color[HTML]{FFFFFF} \textbf{Personal}} & {\color[HTML]{FFFFFF} \textbf{Ressources}} & {\color[HTML]{FFFFFF} \textbf{Gesamt}} \\
+		Entwicklungskosten                      & 1                                           & 70                                      & 385.00 €                                 & 1,295.00 €                                 & 1,680.00 €                             \\
+		\rowcolor[HTML]{BBDAFF}
+		Fachgespräch                            & 2                                           & 5                                       & 350.00 €                                 & 92.50 €                                    & 1,842.50 €                             \\
+		Code Review                             & 2                                           & 2                                       & 140.00 €                                 & 37.00 €                                    & 317.00 €                               \\
+		\rowcolor[HTML]{BBDAFF}
+		Abnahme                                 & 2                                           & 0.5                                     & 35.00 €                                  & 9.25 €                                     & 44.25 €                                \\
+		&                                             &                                         & \multicolumn{2}{l}{\textbf{Projektkosten Gesamt:}}                                    & \textbf{3,883.75 €}
+	\end{tabular}
+\end{table}
 
 \subsubsection{Lastenheft}
 \renewcommand{\labelenumii}{\theenumii}
@@ -53,7 +70,6 @@
 \end{enumerate}
 
 \subsubsection{Nutzwertanalyse: Projektentwicklung}
-
 \begin{table}[!htp]
 \centering
 \caption{Nutzwertanalyse Projektentwicklung}
