--- a/dokumentation/src/analysephase.tex
+++ b/dokumentation/src/analysephase.tex
@@ -33,14 +33,6 @@ Damerau-Levenshtein Distanz zu verwenden. Zudem soll erziehlt werden, dass die
 menschliche Komponente aus dem Vergleichsverfahren eliminiert wird,
 somit also keine Heuristiken zum Symbol-Vergleich benötigt werden.\par
 
-
-\footnotetext{Die Damerau-Levenshtein Distanz\cite{dl_distance} beschreibt die minimale Anzahl
-an Operationen welche benötigt wird um einen String A in einen zu
-vergleichenden String B zu verwandeln}
-
-\footnotetext{Eine Billiarde achtunddreißig Billionen neunhundertein Milliarden
-neunhundertachtundachtzig Millionen siebenhundertsechsundvierzigtausendzweihundertsechsundzwanzig}
-
 \subsection{Wirtschaftlichkeitsanalyse}
 \subsubsection{Make-or-Buy Entscheidung}
 Ein Tool, welches das obig-beschriebene Problem löst, gibt es zur Zeit nur mit dem
@@ -81,30 +73,19 @@ Die vollständige Liste der Alternativen lautet wie folgt:
 
 
 \subsubsection{Projektkosten}
-
-\begin{table}[!htp]
-\centering
-\caption{Projektkosten}
-\label{projektkosten}
-\begin{tabular}{llllll}
-\rowcolor[HTML]{9698ED}
-{\color[HTML]{FFFFFF} \textbf{Vorgang}} & {\color[HTML]{FFFFFF} \textbf{Mitarbeiter}} & {\color[HTML]{FFFFFF} \textbf{Stunden}} & {\color[HTML]{FFFFFF} \textbf{Personal}} & {\color[HTML]{FFFFFF} \textbf{Ressources}} & {\color[HTML]{FFFFFF} \textbf{Gesamt}} \\
-Entwicklungskosten                      & 1                                           & 70                                      & 385.00 €                                 & 1,295.00 €                                 & 1,680.00 €                             \\
-\rowcolor[HTML]{BBDAFF}
-Fachgespräch                            & 2                                           & 5                                       & 350.00 €                                 & 92.50 €                                    & 1,842.50 €                             \\
-Code Review                             & 2                                           & 2                                       & 140.00 €                                 & 37.00 €                                    & 317.00 €                               \\
-\rowcolor[HTML]{BBDAFF}
-Abnahme                                 & 2                                           & 0.5                                     & 35.00 €                                  & 9.25 €                                     & 44.25 €                                \\
-                                        &                                             &                                         & \multicolumn{2}{l}{\textbf{Projektkosten Gesamt:}}                                    & \textbf{3,883.75 €}
-\end{tabular}
-\end{table}
-
+Als nächstes wurden die exakten Projektkosten berechnet. Hierfür wurden pauschale Beträge 
+für Mitarbeiterstundenlöhne, sowie Kosten für Räumlichkeiten, Strom und sonstige Utensilien 
+(Papier, Drucker, Programme, Rechner etc) veranschlagt. Diese können in der tabelle 
+\ref{projektkosten} eingesehen werden. Es wurden hierfür ein Stundenlohn von 5,50€ für den 
+Autoren, sowie ein Stundenlohn von 35€ für jeden weiteren Mitarbeiter angesetzt. Nutzungskosten 
+der Räumlichkeiten, Rechner Software und weiterer Utensilien wurden mit 20€ pro Stunde kalkuliert. \par
 
 
 \subsubsection{Amortisationsdauer}
+Im Schnitt verbringt ein Mitarbeiter etwa 2.5h pro Woche mit der heuristischen Auswertung der Derivatsymbole.
 
 
-\subsection{Nutzwertanalyse}
+\subsection{Nutzwertanalysen}
 
 \subsection{Anwendungsfälle}
 Ein ungefähre Übersicht der Anwendungsfälle des Programms wurde mit Hilfe eines Use-Case-Diagramms
@@ -116,5 +97,14 @@ Ein Lastenheft wurde von der Abteilung Datenverarbeitung, vertreten durch Sebast
 erstellt und dem Autor vorgelegt. Ein Auszug dieses Dokumentes befindet sich im Anhang auf Seite X.\par
 
 
-\subsection{Zwischenstand}
+% FOOTNOTES
+
+\footnotetext{Die Damerau-Levenshtein Distanz\cite{dl_distance} beschreibt die minimale Anzahl
+	an Operationen welche benötigt wird um einen String A in einen zu
+	vergleichenden String B zu verwandeln}
+
+\footnotetext{Eine Billiarde achtunddreißig Billionen neunhundertein Milliarden
+	neunhundertachtundachtzig Millionen siebenhundertsechsundvierzigtausendzweihundertsechsundzwanzig}
+
+
 \clearpage
