added geschäftslogik entry

--- a/dokumentation/src/anhang.tex
+++ b/dokumentation/src/anhang.tex
@@ -6,7 +6,7 @@
 \begin{table}[!htp]
 	\centering
 	\caption{Projektkosten}
-	\label{projektkosten}
+	\label{tabelle:projektkosten}
 	\begin{tabular}{llllll}
 		\rowcolor[HTML]{9698ED}
 		{\color[HTML]{FFFFFF} \textbf{Vorgang}} & {\color[HTML]{FFFFFF} \textbf{Mitarbeiter}} & {\color[HTML]{FFFFFF} \textbf{Stunden}} & {\color[HTML]{FFFFFF} \textbf{Personal}} & {\color[HTML]{FFFFFF} \textbf{Ressources}} & {\color[HTML]{FFFFFF} \textbf{Gesamt}} \\
@@ -71,22 +71,22 @@
 
 \subsubsection{Nutzwertanalyse: Projektentwicklung}
 \begin{table}[!htp]
-\centering
-\caption{Nutzwertanalyse Projektentwicklung}
-\label{nwa_projektentwicklung}
-\begin{tabular}{llllllllll}
-\rowcolor[HTML]{9698ED}
-{\color[HTML]{FFFFFF} \textbf{Kriterien}} & {\color[HTML]{FFFFFF} \textbf{Gewicht}} & {\color[HTML]{FFFFFF} \textbf{Externe Entwicklung}} & {\color[HTML]{FFFFFF} \textbf{}}       & {\color[HTML]{FFFFFF} \textbf{Interne Entwicklung}} & {\color[HTML]{FFFFFF} \textbf{}}       & {\color[HTML]{FFFFFF} \textbf{Dedizierter 12-Kerner}} & {\color[HTML]{FFFFFF} \textbf{}}       & {\color[HTML]{FFFFFF} \textbf{Cluster}}   & {\color[HTML]{FFFFFF} \textbf{}}       \\
-\rowcolor[HTML]{9698ED}
-{\color[HTML]{FFFFFF} \textbf{}}          & {\color[HTML]{FFFFFF} \textbf{}}        & {\color[HTML]{FFFFFF} \textbf{Bewertung}}           & {\color[HTML]{FFFFFF} \textbf{Gesamt}} & {\color[HTML]{FFFFFF} \textbf{Bewertung}}           & {\color[HTML]{FFFFFF} \textbf{Gesamt}} & {\color[HTML]{FFFFFF} \textbf{Bewertung}}             & {\color[HTML]{FFFFFF} \textbf{Gesamt}} & {\color[HTML]{FFFFFF} \textbf{Bewertung}} & {\color[HTML]{FFFFFF} \textbf{Gesamt}} \\
-Projektkosten                             & 45.00\%                                 & 4                                                   & 1.8                                    & 5                                                   & 2.25                                   & 4                                                     & 1.8                                    & 3                                         & 1.35                                   \\
-\rowcolor[HTML]{BBDAFF}
-Nachhaltigkeit                            & 15.00\%                                 & 4                                                   & 0.6                                    & 4                                                   & 0.6                                    & 1                                                     & 0.15                                   & 1                                         & 0.15                                   \\
-Flexibilit채t                              & 5.00\%                                  & 3                                                   & 0.15                                   & 5                                                   & 0.25                                   & 4                                                     & 0.2                                    & 4                                         & 0.2                                    \\
-\rowcolor[HTML]{BBDAFF}
-Unterhaltskosten                          & 35.00\%                                 & 4                                                   & 1.4                                    & 4                                                   & 1.4                                    & 2                                                     & 0.7                                    & 1                                         & 0.35                                   \\
-\textbf{Gesamt}                           & \textbf{100.00\%}                       & \textbf{}                                           & \textbf{3.95}                          & \textbf{}                                           & \textbf{4.5}                           & \textbf{}                                             & \textbf{2.85}                          & \textbf{}                                 & \textbf{2.05}
-\end{tabular}
+	\centering
+	\caption{Nutzwertanalyse Projektentwicklung}
+	\label{nwa:projektentwicklung}
+	\begin{tabular}{llllllllll}
+		\rowcolor[HTML]{9698ED}
+		{\color[HTML]{FFFFFF} \textbf{Kriterien}} & {\color[HTML]{FFFFFF} \textbf{Gewicht}} & {\color[HTML]{FFFFFF} \textbf{Externe Entwicklung}} & {\color[HTML]{FFFFFF} \textbf{}}       & {\color[HTML]{FFFFFF} \textbf{Interne Entwicklung}} & {\color[HTML]{FFFFFF} \textbf{}}       & {\color[HTML]{FFFFFF} \textbf{Dedizierter 12-Kerner}} & {\color[HTML]{FFFFFF} \textbf{}}       & {\color[HTML]{FFFFFF} \textbf{Cluster}}   & {\color[HTML]{FFFFFF} \textbf{}}       \\
+		\rowcolor[HTML]{9698ED}
+		{\color[HTML]{FFFFFF} \textbf{}}          & {\color[HTML]{FFFFFF} \textbf{}}        & {\color[HTML]{FFFFFF} \textbf{Bewertung}}           & {\color[HTML]{FFFFFF} \textbf{Gesamt}} & {\color[HTML]{FFFFFF} \textbf{Bewertung}}           & {\color[HTML]{FFFFFF} \textbf{Gesamt}} & {\color[HTML]{FFFFFF} \textbf{Bewertung}}             & {\color[HTML]{FFFFFF} \textbf{Gesamt}} & {\color[HTML]{FFFFFF} \textbf{Bewertung}} & {\color[HTML]{FFFFFF} \textbf{Gesamt}} \\
+		Projektkosten                             & 45.00\%                                 & 4                                                   & 1.8                                    & 5                                                   & 2.25                                   & 4                                                     & 1.8                                    & 3                                         & 1.35                                   \\
+		\rowcolor[HTML]{BBDAFF}
+		Nachhaltigkeit                            & 15.00\%                                 & 4                                                   & 0.6                                    & 4                                                   & 0.6                                    & 1                                                     & 0.15                                   & 1                                         & 0.15                                   \\
+		Flexibilit채t                              & 5.00\%                                  & 3                                                   & 0.15                                   & 5                                                   & 0.25                                   & 4                                                     & 0.2                                    & 4                                         & 0.2                                    \\
+		\rowcolor[HTML]{BBDAFF}
+		Unterhaltskosten                          & 35.00\%                                 & 4                                                   & 1.4                                    & 4                                                   & 1.4                                    & 2                                                     & 0.7                                    & 1                                         & 0.35                                   \\
+		\textbf{Gesamt}                           & \textbf{100.00\%}                       & \textbf{}                                           & \textbf{3.95}                          & \textbf{}                                           & \textbf{4.5}                           & \textbf{}                                             & \textbf{2.85}                          & \textbf{}                                 & \textbf{2.05}
+	\end{tabular}
 \end{table}
 
 \subsubsection{Use-Case QGJoin}
@@ -96,8 +96,8 @@ Unterhaltskosten                          & 35.00\%                             
 
 \begin{table}[!htp]
     \centering
-    \caption{My caption}
-    \label{my-label}
+    \caption{Nutzwertanalyse der Programmiersprachen}
+    \label{nwa:sprachen}
     \begin{tabular}{llllllllll}
         \rowcolor[HTML]{9698ED}
         {\color[HTML]{FFFFFF} \textbf{Kriterien}} & \multicolumn{1}{c}{\cellcolor[HTML]{9698ED}{\color[HTML]{FFFFFF} \textbf{Gewicht}}} & \multicolumn{2}{c}{\cellcolor[HTML]{9698ED}{\color[HTML]{FFFFFF} \textbf{C}}}                                                                                              & \multicolumn{2}{c}{\cellcolor[HTML]{9698ED}{\color[HTML]{FFFFFF} \textbf{C++}}}                                                                                            & \multicolumn{2}{c}{\cellcolor[HTML]{9698ED}{\color[HTML]{FFFFFF} \textbf{Java}}}                                                                                           & \multicolumn{2}{c}{\cellcolor[HTML]{9698ED}{\color[HTML]{FFFFFF} \textbf{Haskell}}}                                                                                        \\
@@ -119,7 +119,8 @@ Unterhaltskosten                          & 35.00\%                             
 
 \begin{table}[!htp]
     \centering
-    \label{nwa_datentyp}
+	\caption{Nutzwertanalyse der Datentypen für Q}
+    \label{nwa:datentyp}
     \begin{tabular}{llllll}
         \rowcolor[HTML]{9698ED}
         \cellcolor[HTML]{9698ED}{\color[HTML]{FFFFFF} }                                     & \cellcolor[HTML]{9698ED}{\color[HTML]{FFFFFF} }                                   & \multicolumn{2}{l}{\cellcolor[HTML]{9698ED}{\color[HTML]{FFFFFF} \textbf{Hashmap}}} & \multicolumn{2}{l}{\cellcolor[HTML]{9698ED}{\color[HTML]{FFFFFF} \textbf{Binärbaum}}} \\
@@ -146,15 +147,15 @@ Unterhaltskosten                          & 35.00\%                             
 \subsubsection{Analyse: Verteilung der Qgramme}
 \begin{figure}[!htp]
     \caption{Verteilung der QGramme im zu bearbeitenden Datensatz}
-    \label{qgram_verteilung}
+    \label{fig:qgram_verteilung}
     \includegraphics[width=\textwidth]{multiplicity_of_qgrams.eps}
     \centering
 \end{figure}
 
 \subsubsection{Datenmodell}
 \begin{figure}[!htp]
-    \caption{UML Darstellung des vorhandenen Datenmodells}
-    \label{qgram_verteilung}
+    \caption{UML Darstellung des Datenmodells}
+    \label{fig:datenmodell}
     \includegraphics[width=\textwidth]{datenmodell}
     \centering
 \end{figure}
@@ -163,15 +164,15 @@ Unterhaltskosten                          & 35.00\%                             
 
 \subsection{Implementierungsphase}
 \subsubsection{Quellcodeauszug: Dynamische Array}
-\lstinputlisting[language=C, caption=Auszug aus dem C Quellcode der dynamischen Array]{anhang/array.c}
+\lstinputlisting[language=C, label=lising:arrayImplementation, caption=Auszug aus dem C Quellcode der dynamischen Array]{anhang/array.c}
 
 \subsubsection{Quellcodeauszug: Hashtable Implementation}
-\lstinputlisting[language=C, caption=Auszug aus dem C Quellcode der dynamischen Array]{anhang/hashmap.c}
+\lstinputlisting[language=C, label=listing:hashtableImplmentation, caption=Auszug aus dem C Quellcode der dynamischen Array]{anhang/hashmap.c}
 
 \subsubsection{Auszug: Hilfeausgabe des Kommandozeilenprogramms}
 
 \subsection{Dokumentationsphase}
 \subsubsection{Auszug: Entwicklerdokumentation}
-\lstinputlisting[language=C, caption=Beispiel eines Docstrings für Entwickler]{anhang/docstring.c}
+\lstinputlisting[language=C, label=listing:entwicklerDoku, caption=Beispiel eines Docstrings für Entwickler]{anhang/docstring.c}
 
 \subsubsection{Auszug: Endnutzerdokumentation}
