spelling fixes and text updates

--- a/dokumentation/src/intro.tex
+++ b/dokumentation/src/intro.tex
@@ -46,7 +46,7 @@ anderen Aufgaben zu geteilt werden können.\par
 
 \subsection{Projektschnittstellen}
 Das Programm wird als Kommandozeilenprogramm angeboten, welches
-Daten per Pipe (" | ")  oder unter Angabe eines Dateipfads annimmt und diese im .csv 
+Daten per Pipe oder unter Angabe eines Dateipfads annimmt und diese im .csv 
 Format über STDOUT ausgibt. Dieser Ansatz der Resultatausgabe wird explizit gewünscht, 
 da sich das Programm so mühelos in die bisherige Toolchain der Firma einbinden lässt.
 Die Nutzung dieses Tools findet hierbei vor Allem in der Abteilung
