--- a/dokumentation/src/acronyms.tex
+++ b/dokumentation/src/acronyms.tex
@@ -1,3 +1,4 @@
+\section{Abkürzungsverzeichnis}
 \begin{itemize}
 	\item \textbf{GLEIS}: Global Legal Entity Identifier System
     \item \textbf{CLI}: Command Line Interface
